# Raytracer

./: CMakeLists.txt  README.md  common.h  light.h  main.cpp  object.h  quad.h  raytrace.h  sphere.h  triangle.h
GLFW/lib/win32/: glew32.lib
Image/: Image.cpp  Image.h  PostCommand.cmake  SetEnv.cmake
libpng/lib/win32/: libpng16_static.lib  zlibstatic.lib
